	Fixed #IP-1314: Custom DNS SRV record - Missing TLS protocol
	Fixed #IP-1315: Defect - Statistics overview with special characters breaks view
	Fixed #IP-1323: Invalid query result column used in change_domain_status() function
	Fixed #IP-1327: Unable to add subdomain (subals) - An error occurred while reading flags on ...

------------------------------------------------------------------------------------------------------------------------
1.2.2
------------------------------------------------------------------------------------------------------------------------

2015-02-12: Laurent Declercq
	RELEASE i-MSCP 1.2.2

BACKEND
	Fixed: Invalid argument at /usr/share/perl5/MIME/Entity.pm line 1878 ( autoreply script )
	Fixed: Wrong sqld server name
	Fixed: Vlogger - High CPU usage

FRONTEND
	Fixed: Wrong URL in default email templates ( Missing port )
	Updated: Logo and CSS

INSTALLER
	Added: panel_ports item for the --reconfigure command line option
	Fixed: Encoding issue when running installer through SSH with PuTTY

PACKAGES
	Added: Ports dialog ( FrontEnd package )
	Fixed: Several event listeners are registered too late ( regression fix )
	Fixed: Awstats section not added in vhost files

PLUGINS
	Updated: API to version 0.2.17

YOUTRACK
	Fixed #IP-1259: Layout - Text goes out of statistic bar
	Fixed #IP-1263: Access to statistics ( Awstats ) is broken - 404 error
	Fixed #IP-1267: Double-quotes in the Dovecot SQL user's password must be escaped

------------------------------------------------------------------------------------------------------------------------
1.2.1
------------------------------------------------------------------------------------------------------------------------

2015-02-06: Laurent Declercq
	RELEASE i-MSCP 1.2.1

BACKEND
	Added: Checks for a2enconf/a2disconf command availability
	Added: -h ( help ) short option ( iMSCP::Getopt module )
	Fixed: Composer cache is not cleared correctly