@@ -96,6 +96,7 @@ YOUTRACK
 	Fixed #IP-1315: Defect - Statistics overview with special characters breaks view
 	Fixed #IP-1323: Invalid query result column used in change_domain_status() function
 	Fixed #IP-1327: Unable to add subdomain (subals) - An error occurred while reading flags on ...
+	Fixed #IP-1330: Proftpd - Unable to connect to i-MSCP database
 
 ------------------------------------------------------------------------------------------------------------------------
 1.2.2
